arreglo en la estructura del indice uniendo cap1

--- a/Capitulos/Capitulo1-JavierPerez.html
+++ b/Capitulos/Capitulo1-JavierPerez.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Capítulo 1: Qué es programar y por dónde empiezo</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <header>
@@ -50,7 +51,7 @@
     
     <nav>
        <ul>
-        <li><a href="index.html">Volver a la página principal</a></li>
+        <li><a href="../index.html">Volver a la página principal</a></li>
        </ul>      
     </nav>
 </body>
