todo preparado para mi compañero y trabajo listo.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi libro web</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">           <!-- IMPORTANTE: NO TOCAR INDEX!!! -->
 </head>
 <body>
     <header>
@@ -27,7 +27,8 @@
    <nav>
     <h2>Capítulos</h2>
     <ul>
-      <li><a href="Capitulos/Capitulo1-JavierPerez.html">Capítulo 1: Qué es programar</a></li>      
+        <li><a href="Capitulos/Capitulo1-JavierPerez.html">Capítulo 1: Qué es programar</a></li>      
+        <li><a href="capitulos/Capitulo2-NombreCompanero.html">Capítulo 2: (título)</a></li>
     </ul>
   </nav>
 
