--- a/Capitulos/Capitulo1-JavierPerez.html
+++ b/Capitulos/Capitulo1-JavierPerez.html
@@ -68,7 +68,8 @@
     
     <nav>
        <ul>
-        <li><a href="../index.html">Volver a la página principal</a></li>
+            <li><a href="../index.html">Volver a la página principal</a></li>
+           <li><a href="Capitulo2-NombreCompanero.html">Ir al capítulo 2</a></li>
        </ul>      
     </nav>
 </body>
