--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h2>Capítulos</h2>
     <ul>
         <li><a href="Capitulos/Capitulo1-JavierPerez.html">Capítulo 1: Qué es programar</a></li>      
-        <li><a href="capitulos/Capitulo2-NombreCompanero.html">Capítulo 2: (título)</a></li>
+        <li><a href="capitulos/Capitulo2-JorgeYaroslav.html">Capítulo 2: Herramientas básicas para programar</a></li>
     </ul>
   </nav>
 
